--- a/StudizPrototype/app/src/main/res/layout/activity_homepage1.xml
+++ b/StudizPrototype/app/src/main/res/layout/activity_homepage1.xml
@@ -21,7 +21,8 @@
         android:verticalSpacing="4dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/slider" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -68,14 +69,13 @@
         android:layout_marginLeft="20dp"
         android:layout_marginEnd="20dp"
         android:layout_marginRight="20dp"
-        android:layout_marginBottom="24dp"
         app:auto_cycle="true"
         app:delay="0"
         app:error_image="@drawable/grey_bg"
-        app:layout_constraintBottom_toTopOf="@+id/gridView"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:period="1000"
         app:placeholder="@drawable/grey_bg" />
 
