--- a/StudizPrototype/app/src/main/res/values/colors.xml
+++ b/StudizPrototype/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="studizfarve">#328FC4</color>
+    <color name="studizlys">#99C7E1</color>
+    <color name="knapBlå">#FF0048FF</color>
 </resources>
