--- a/StudizPrototype/app/src/main/res/layout/activity_homepage1.xml
+++ b/StudizPrototype/app/src/main/res/layout/activity_homepage1.xml
@@ -28,6 +28,7 @@
         android:layout_width="match_parent"
         android:layout_height="55dp"
         android:orientation="horizontal"
+        android:background="@color/studizfarve"
         app:layout_constraintBottom_toBottomOf="parent">
 
         <ImageButton
@@ -35,6 +36,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:backgroundTint="@color/studizlys"
             android:src="@drawable/ic_home_black_24dp" />
 
         <ImageButton
@@ -42,6 +44,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:backgroundTint="@color/studizlys"
             android:src="@drawable/ic_baseline_category_24" />
 
         <ImageButton
@@ -49,6 +52,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:backgroundTint="@color/studizlys"
             android:src="@drawable/ic_baseline_perm_identity_24" />
 
         <ImageButton
@@ -56,6 +60,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:backgroundTint="@color/studizlys"
             android:src="@drawable/settings" />
 
     </LinearLayout>
