--- a/StudizPrototype/app/src/main/res/layout/activity_categories.xml
+++ b/StudizPrototype/app/src/main/res/layout/activity_categories.xml
@@ -126,18 +126,20 @@
             <TextView
                 android:layout_width="250dp"
                 android:layout_height="wrap_content"
-                android:text="@string/catrestaurant"
-                android:textSize="20sp"
-                android:padding="25dp"
                 android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"/>
+                android:layout_centerVertical="true"
+                android:onClick="goTorestaurant"
+                android:padding="25dp"
+                android:text="@string/catrestaurant"
+                android:textSize="20sp" />
 
 
             <ImageView
                 android:layout_width="150dp"
                 android:layout_height="150dp"
-                android:src="@drawable/catrestaurant"
-                android:layout_alignParentLeft="true"/>
+                android:layout_alignParentLeft="true"
+                android:onClick="goTorestaurant"
+                android:src="@drawable/catrestaurant" />
 
             <Button
                 android:id="@+id/restaurant"
@@ -146,6 +148,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="true"
                 android:background="#00000000"
+                android:onClick="goTorestaurant"
                 android:padding="20dp" />
 
 
