--- a/StudizPrototype/app/src/main/res/layout/row_items.xml
+++ b/StudizPrototype/app/src/main/res/layout/row_items.xml
@@ -21,7 +21,7 @@
             android:layout_height="100dp"
             android:layout_centerHorizontal="true"
             android:padding="10dp"
-            android:scaleType="fitXY"
+            android:scaleType="centerInside"
             android:src="@mipmap/ic_launcher" />
 
         <TextView
