--- a/StudizPrototype/app/src/main/res/layout/activity_clicked_item.xml
+++ b/StudizPrototype/app/src/main/res/layout/activity_clicked_item.xml
@@ -22,7 +22,7 @@
         android:layout_marginTop="4dp"
         android:layout_marginEnd="6dp"
         android:layout_marginRight="6dp"
-        android:scaleType="fitXY"
+        android:scaleType="centerInside"
         android:src="@mipmap/ic_launcher" />
 
     <TextView
