--- a/StudizPrototype/app/src/main/res/layout/activity_categories.xml
+++ b/StudizPrototype/app/src/main/res/layout/activity_categories.xml
@@ -12,9 +12,40 @@
         android:layout_margin="0dp"
         android:orientation="vertical">
 
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="55dp"
+            >
 
-        
+            <Button
+                android:id="@+id/søge"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentBottom="true"
+                android:background="#00000000"
+                android:onClick="goToSearch"
+                android:padding="20dp" />
 
+
+            <TextView
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:onClick="goToSearch"
+                android:text="Søgefunktion"
+                android:textSize="20sp" />
+
+
+            <ImageView
+                android:layout_width="150dp"
+                android:layout_height="150dp"
+                android:layout_alignParentLeft="true"
+                android:onClick="goToSearch"
+                android:src="@drawable/searchicon" />
+
+        </RelativeLayout>
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -418,12 +449,12 @@
                 android:background="#00000000"
                 android:onClick="goTohealth"
                 android:padding="20dp" />
-
-
+            
 
         </RelativeLayout>
 
         <RelativeLayout
+            android:windowSoftInputMode="stateAlwaysVisible|adjustResize"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
@@ -468,7 +499,6 @@
 
             </LinearLayout>
         </RelativeLayout>
-
 
 
     </LinearLayout>
