--- a/StudizPrototype/app/src/main/res/layout/activity_main.xml
+++ b/StudizPrototype/app/src/main/res/layout/activity_main.xml
@@ -51,10 +51,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif-medium"
+        android:lineSpacingExtra="8sp"
         android:text="Studiz"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
         android:textColor="@color/black"
         android:textSize="60dp"
+        android:textStyle="italic"
+        android:typeface="serif"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
