--- a/StudizPrototype/app/src/main/res/layout/activity_categories.xml
+++ b/StudizPrototype/app/src/main/res/layout/activity_categories.xml
@@ -25,31 +25,24 @@
                 android:layout_alignParentBottom="true"
                 android:background="#00000000"
                 android:onClick="goToSearch"
-                android:padding="20dp" />
+                android:padding="10dp" />
 
 
-            <TextView
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
+            <EditText
+                android:id="@+id/btnToSearch"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:hint="Search..."
                 android:onClick="goToSearch"
-                android:text="Søgefunktion"
-                android:textSize="20sp" />
-
-
-            <ImageView
-                android:layout_width="150dp"
-                android:layout_height="150dp"
-                android:layout_alignParentLeft="true"
-                android:onClick="goToSearch"
-                android:src="@drawable/searchicon" />
+                android:layout_marginTop="0dp"
+                />
 
         </RelativeLayout>
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="150dp"
+            android:background="@drawable/round_corners"
             >
 
             <Button
@@ -71,7 +64,8 @@
                 android:onClick="goTobar"
                 android:padding="25dp"
                 android:text="@string/catbar"
-                android:textSize="20sp" />
+                android:textSize="20sp"
+                android:textColor="@color/white"/>
 
 
             <ImageView
@@ -81,14 +75,13 @@
                 android:onClick="goTobar"
                 android:src="@drawable/catbar" />
 
-
-
-
         </RelativeLayout>
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="150dp"
+            android:layout_marginTop="8dp"
+            android:background="@drawable/round_corners"
             >
 
             <TextView
@@ -99,7 +92,8 @@
                 android:onClick="goTobooks"
                 android:padding="25dp"
                 android:text="@string/catbooks"
-                android:textSize="20sp" />
+                android:textSize="20sp"
+                android:textColor="@color/white"/>
 
 
             <ImageView
@@ -126,6 +120,8 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="150dp"
+            android:layout_marginTop="8dp"
+            android:background="@drawable/round_corners"
             >
 
             <TextView
@@ -136,7 +132,8 @@
                 android:onClick="goTorestaurant"
                 android:padding="25dp"
                 android:text="@string/catrestaurant"
-                android:textSize="20sp" />
+                android:textSize="20sp"
+                android:textColor="@color/white"/>
 
 
             <ImageView
@@ -162,7 +159,9 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="150dp">
+            android:layout_height="150dp"
+            android:layout_marginTop="8dp"
+            android:background="@drawable/round_corners">
 
             <TextView
                 android:layout_width="200dp"
@@ -172,7 +171,8 @@
                 android:onClick="goToit"
                 android:padding="25dp"
                 android:text="@string/catelectronic"
-                android:textSize="20sp" />
+                android:textSize="20sp"
+                android:textColor="@color/white"/>
 
 
             <ImageView
@@ -198,6 +198,8 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="150dp"
+            android:layout_marginTop="8dp"
+            android:background="@drawable/round_corners"
             >
 
             <TextView
@@ -208,7 +210,8 @@
                 android:onClick="goTofreetime"
                 android:padding="25dp"
                 android:text="@string/catfreetime"
-                android:textSize="20sp" />
+                android:textSize="20sp"
+                android:textColor="@color/white"/>
 
 
             <ImageView
@@ -235,6 +238,8 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="150dp"
+            android:layout_marginTop="8dp"
+            android:background="@drawable/round_corners"
             >
 
             <TextView
@@ -245,7 +250,8 @@
                 android:onClick="goToshopping"
                 android:padding="25dp"
                 android:text="@string/catshop"
-                android:textSize="20sp" />
+                android:textSize="20sp"
+                android:textColor="@color/white"/>
 
 
             <ImageView
@@ -272,6 +278,8 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="150dp"
+            android:layout_marginTop="8dp"
+            android:background="@drawable/round_corners"
             >
 
             <TextView
@@ -282,7 +290,8 @@
                 android:onClick="goTofashion"
                 android:padding="25dp"
                 android:text="@string/catfashion"
-                android:textSize="20sp" />
+                android:textSize="20sp"
+                android:textColor="@color/white"/>
 
 
             <ImageView
@@ -309,6 +318,8 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="150dp"
+            android:layout_marginTop="8dp"
+            android:background="@drawable/round_corners"
             >
 
             <TextView
@@ -319,7 +330,8 @@
                 android:onClick="goTotransport"
                 android:padding="25dp"
                 android:text="@string/cattransport"
-                android:textSize="20sp" />
+                android:textSize="20sp"
+                android:textColor="@color/white"/>
 
 
             <ImageView
@@ -346,6 +358,8 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="150dp"
+            android:layout_marginTop="8dp"
+            android:background="@drawable/round_corners"
             >
 
             <TextView
@@ -356,7 +370,8 @@
                 android:onClick="goTobeauty"
                 android:padding="25dp"
                 android:text="@string/catbeauty"
-                android:textSize="20sp" />
+                android:textSize="20sp"
+                android:textColor="@color/white"/>
 
 
             <ImageView
@@ -383,6 +398,8 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="150dp"
+            android:layout_marginTop="8dp"
+            android:background="@drawable/round_corners"
             >
 
             <TextView
@@ -393,7 +410,8 @@
                 android:onClick="goTosport"
                 android:padding="25dp"
                 android:text="@string/catsport"
-                android:textSize="20sp" />
+                android:textSize="20sp"
+                android:textColor="@color/white"/>
 
 
             <ImageView
@@ -420,6 +438,8 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="150dp"
+            android:layout_marginTop="8dp"
+            android:background="@drawable/round_corners"
             >
 
             <TextView
@@ -430,7 +450,8 @@
                 android:onClick="goTohealth"
                 android:padding="25dp"
                 android:text="@string/cathealt"
-                android:textSize="20sp" />
+                android:textSize="20sp"
+                android:textColor="@color/white"/>
 
 
             <ImageView
@@ -456,7 +477,8 @@
         <RelativeLayout
             android:windowSoftInputMode="stateAlwaysVisible|adjustResize"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
