--- a/StudizPrototype/app/src/main/res/layout/activity_categories.xml
+++ b/StudizPrototype/app/src/main/res/layout/activity_categories.xml
@@ -15,6 +15,8 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="55dp"
+            android:layout_marginTop="8dp"
+            android:background="@drawable/round_corners"
             >
 
             <Button
@@ -30,9 +32,11 @@
 
             <EditText
                 android:id="@+id/btnToSearch"
-                android:layout_width="match_parent"
+                android:layout_width="350dp"
+                android:layout_centerHorizontal="true"
                 android:layout_height="match_parent"
                 android:hint="Search..."
+                android:textColorHint="@color/white"
                 android:onClick="goToSearch"
                 android:layout_marginTop="0dp"
                 />
@@ -42,6 +46,7 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="150dp"
+            android:layout_marginTop="8dp"
             android:background="@drawable/round_corners"
             >
 
@@ -61,17 +66,20 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="10dp"
                 android:onClick="goTobar"
-                android:padding="25dp"
+                android:padding="2dp"
                 android:text="@string/catbar"
-                android:textSize="20sp"
-                android:textColor="@color/white"/>
-
+                android:textColor="@color/white"
+                android:textSize="30sp" />
 
             <ImageView
                 android:layout_width="150dp"
                 android:layout_height="150dp"
                 android:layout_alignParentLeft="true"
+                android:layout_alignParentBottom="true"
+                android:layout_marginLeft="40dp"
                 android:onClick="goTobar"
                 android:src="@drawable/catbar" />
 
@@ -89,10 +97,12 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="10dp"
                 android:onClick="goTobooks"
-                android:padding="25dp"
+                android:padding="2dp"
                 android:text="@string/catbooks"
-                android:textSize="20sp"
+                android:textSize="30sp"
                 android:textColor="@color/white"/>
 
 
@@ -100,6 +110,7 @@
                 android:layout_width="150dp"
                 android:layout_height="150dp"
                 android:layout_alignParentLeft="true"
+                android:layout_marginLeft="40dp"
                 android:onClick="goTobooks"
                 android:src="@drawable/catbooks" />
 
@@ -109,10 +120,11 @@
                 android:layout_height="match_parent"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="true"
+                android:layout_marginRight="-1dp"
+                android:layout_marginBottom="0dp"
                 android:background="#00000000"
                 android:onClick="goTobooks"
                 android:padding="20dp" />
-
 
 
         </RelativeLayout>
@@ -129,10 +141,12 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="10dp"
                 android:onClick="goTorestaurant"
-                android:padding="25dp"
+                android:padding="2dp"
                 android:text="@string/catrestaurant"
-                android:textSize="20sp"
+                android:textSize="30sp"
                 android:textColor="@color/white"/>
 
 
@@ -140,6 +154,7 @@
                 android:layout_width="150dp"
                 android:layout_height="150dp"
                 android:layout_alignParentLeft="true"
+                android:layout_marginLeft="40dp"
                 android:onClick="goTorestaurant"
                 android:src="@drawable/catrestaurant" />
 
@@ -168,10 +183,12 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="10dp"
                 android:onClick="goToit"
-                android:padding="25dp"
+                android:padding="2dp"
                 android:text="@string/catelectronic"
-                android:textSize="20sp"
+                android:textSize="30sp"
                 android:textColor="@color/white"/>
 
 
@@ -179,6 +196,7 @@
                 android:layout_width="150dp"
                 android:layout_height="150dp"
                 android:layout_alignParentLeft="true"
+                android:layout_marginLeft="40dp"
                 android:onClick="goToit"
                 android:src="@drawable/catelectronic" />
 
@@ -207,10 +225,12 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="10dp"
                 android:onClick="goTofreetime"
-                android:padding="25dp"
+                android:padding="2dp"
                 android:text="@string/catfreetime"
-                android:textSize="20sp"
+                android:textSize="30sp"
                 android:textColor="@color/white"/>
 
 
@@ -218,6 +238,7 @@
                 android:layout_width="150dp"
                 android:layout_height="150dp"
                 android:layout_alignParentLeft="true"
+                android:layout_marginLeft="40dp"
                 android:onClick="goTofreetime"
                 android:src="@drawable/catfreetime" />
 
@@ -247,10 +268,12 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="10dp"
                 android:onClick="goToshopping"
-                android:padding="25dp"
+                android:padding="2dp"
                 android:text="@string/catshop"
-                android:textSize="20sp"
+                android:textSize="30sp"
                 android:textColor="@color/white"/>
 
 
@@ -258,6 +281,7 @@
                 android:layout_width="150dp"
                 android:layout_height="150dp"
                 android:layout_alignParentLeft="true"
+                android:layout_marginLeft="40dp"
                 android:onClick="goToshopping"
                 android:src="@drawable/catshop" />
 
@@ -287,10 +311,12 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="10dp"
                 android:onClick="goTofashion"
-                android:padding="25dp"
+                android:padding="2dp"
                 android:text="@string/catfashion"
-                android:textSize="20sp"
+                android:textSize="30sp"
                 android:textColor="@color/white"/>
 
 
@@ -298,6 +324,7 @@
                 android:layout_width="150dp"
                 android:layout_height="150dp"
                 android:layout_alignParentLeft="true"
+                android:layout_marginLeft="40dp"
                 android:onClick="goTofashion"
                 android:src="@drawable/catfashion" />
 
@@ -327,10 +354,12 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="10dp"
                 android:onClick="goTotransport"
-                android:padding="25dp"
+                android:padding="2dp"
                 android:text="@string/cattransport"
-                android:textSize="20sp"
+                android:textSize="30sp"
                 android:textColor="@color/white"/>
 
 
@@ -338,6 +367,7 @@
                 android:layout_width="150dp"
                 android:layout_height="150dp"
                 android:layout_alignParentLeft="true"
+                android:layout_marginLeft="40dp"
                 android:onClick="goTotransport"
                 android:src="@drawable/cattransport" />
 
@@ -367,10 +397,12 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="10dp"
                 android:onClick="goTobeauty"
-                android:padding="25dp"
+                android:padding="2dp"
                 android:text="@string/catbeauty"
-                android:textSize="20sp"
+                android:textSize="30sp"
                 android:textColor="@color/white"/>
 
 
@@ -378,6 +410,7 @@
                 android:layout_width="150dp"
                 android:layout_height="150dp"
                 android:layout_alignParentLeft="true"
+                android:layout_marginLeft="40dp"
                 android:onClick="goTobeauty"
                 android:src="@drawable/catbeauty" />
 
@@ -407,10 +440,12 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="10dp"
                 android:onClick="goTosport"
-                android:padding="25dp"
+                android:padding="2dp"
                 android:text="@string/catsport"
-                android:textSize="20sp"
+                android:textSize="30sp"
                 android:textColor="@color/white"/>
 
 
@@ -418,6 +453,7 @@
                 android:layout_width="150dp"
                 android:layout_height="150dp"
                 android:layout_alignParentLeft="true"
+                android:layout_marginLeft="40dp"
                 android:onClick="goTosport"
                 android:src="@drawable/catsport" />
 
@@ -447,10 +483,12 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="10dp"
                 android:onClick="goTohealth"
-                android:padding="25dp"
+                android:padding="2dp"
                 android:text="@string/cathealt"
-                android:textSize="20sp"
+                android:textSize="30sp"
                 android:textColor="@color/white"/>
 
 
@@ -458,6 +496,7 @@
                 android:layout_width="150dp"
                 android:layout_height="150dp"
                 android:layout_alignParentLeft="true"
+                android:layout_marginLeft="40dp"
                 android:onClick="goTohealth"
                 android:src="@drawable/cathealt" />
 
